Fix: Overflow of charts on mobile

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -20,3 +20,8 @@ li {
   width: 23px;
   height: 23px;
 }
+
+// Handling large charts on mobile devices
+.output_wrapper{
+  overflow: scroll;
+}
